--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
             Trash In Time - 조금 독특한 시간관리 앱
         </title>
     </head>
-
+    <style>
+        .h { font-weight: bold;}
+    </style>
     <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
+    </br></br></br></br></br></br></br>
                 <img src="1024.png" width="64px" height="64px">
-            </div>
-            <div class="col-sm-8">
-                <h2>Time In Trash</h2>
+
+                <h1>Time In Trash</h1>
                 <h5>조금 독특한 시관 관리 어플</h5>
                 <hr>
                 
@@ -26,8 +26,5 @@
                 <h3>방금 시간을 얼마나 허비했나요?</h3>
                 매일 허비한 시간을 입력하세요.
 
-
-            </div>
-          </div>
     </div>
 </html>
