--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
     <div class="container">
     </br></br></br></br></br></br></br>
-                <img src="1024.png" width="64px" height="64px">
+                <img src="icon.png" width="64px" height="64px">
 
                 <h1>Time In Trash</h1>
                 <h5>조금 독특한 시관 관리 어플</h5>
