--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;900&display=swap" rel="stylesheet">
@@ -8,23 +9,67 @@
         </title>
     </head>
     <style>
-        .h { font-weight: bold;}
+        body { color: #363636;}
+        h1, h3, h5 { font-weight: bold;}
+        img { border: 1px solid #363636;
+                border-radius: 15px;}
+        hr { size: 10px;}
+        a { color: #3273dc;
+            text-decoration: none}
     </style>
     <div class="container">
     </br></br></br></br></br></br></br>
-                <img src="icon.png" width="64px" height="64px">
-
+                <img src="./src/icon.svg" width="128px" height="128px">
+                </br></br></br>
                 <h1>Time In Trash</h1>
-                <h5>조금 독특한 시관 관리 어플</h5>
-                <hr>
-                
+                조금 독특한 시관 관리 어플
+                </br>
+                <a href="#qna">#상황별 도움말</a>
+                <a href="#manual">#사용방법</a>
+                <a href="#license">#오픈소스라이선스</a>
+                </br></br></br>
                 <h3>하루는 모두에게 같은 24시간입니다.</h3>
                 <hr>
+                생각해보세요, 당신과 억대 부자들, 소위 금수저들 모두 공평하게 하루는 24시간이죠?</br>
+                그만큼 시간은 소중합니다. 허지만 하루만에 무언갈 한다 해도 그들을 이기기 어렵습니다.</br>
+                작은 것부터 시작하세요. 당신이 의미 없다고 생각했던 시간들을 기록하세요. TIT를 열고 버튼을 누르기만 하면 됩니다.</br>
                 스스로를 변화시키고 싶다면 낭비하고 있는 시간부터 줄여나가세요. 그리고 기록하세요.</br>
                 그럼 보일것입니다. 당신이 절대로 되찾을 수 없는 시간들을.
+                </br></br></br></br>
+                <h3><a href="#" id="qna">#</a>상황별 도움말 QnA</h3>
+                <hr>
+                <h5>내가 지금 의미있는 일을 하고 있는지 어떻게 판단하나요?</h5>
 
-                <h3>방금 시간을 얼마나 허비했나요?</h3>
-                매일 허비한 시간을 입력하세요.
+                간단합니다. 지금 하는 일이 앞으로 당신에게 도움이 될 수 있는지를 고민해 보세요. 많이도 말고 딱 5분 안에요.</br>
+                그렇다고 쉬지 말라는 이야기가 아닙니다. 휴식은 분명히 당신이 앞으로 나아가기 위해 필요한 일이니까요.</br>
+                그러나 30분 쉬어야지 하고 1시간을 하고 2시간을 하고... 분명 당신도 겪어보았을 경험이겠죠?</br>
 
+                </br></br>
+                <h5>수면시간도 관리를 해야 하나요?</h5>
+                물론이죠 :) 6~8시간 정도는 숙면을 취해주세요. 과학적으로 입증되었으니까요.</br>
+                멀리 바라보세요. 당신이 무얼 목표를 하기에 TIT를 이용하는지는 모르지만 잠을 3~4시간 아껴가는 건 당장 앞에 있는 일만 바라보게 되는 무식한 행동일 가능성이 커요</br>
+
+                </br></br>
+                <h5>왜 이렇게 비싸나요?</h5>
+                단순히 시간관리 앱을 사용하기 위해 3만 7천원을 지불하는 것은 쉽지 않을 겁니다.</br>
+                저희도 처음에는 무료로 배포하는 것을 생각하였으나 이미 무료로 나온 더 좋은 품질의 시간관리 앱들이 많습니다.</br>
+                그런데 무료로 제공하게 되면 아이러니하게도 허투루 사용하게 됩니다.</br>
+                저희는 이 어플을 사용하는 모든 사람들의 삶이 바뀌길 진정으로 원하기에, 원동력이 될 수 있도록 가격을 높게 책정하였습니다.</br>
+                TIT를 이용하기 위해 3만 7천원을 지불할 용의가 있으신 분들만 이용해주세요.</br>
+                단순변심으로 인한 환불은 진행되지 않습니다.
+                </br></br></br></br>
+                <h3><a href="#" id="manual">#</a>사용법 안내</h3>
+                <hr>
+                매일 허비한 시간을 꾸준히 기록하세요.
+                <h5>입력 시간 값 변경</h5>
+                tit에서의 입력 시간 기본값은 10분입니다. 기본값을 바꾸고 싶으시면 환경설정 > 기본 시간 설정 
+
+                </br></br></br></br>
+                <h3><a href="#" id="license">#</a>오픈소스 라이센스</h3>
+                <hr>
+                TIT는 다음의 오픈소스 모듈을 사용하였기에 라이센스 규정에 따라 아래 내용을 명시합니다.</br>
+
+                </br></br></br></br>
+                copyright 2021~ <a href="">hanarotg</a> all right reserved.
     </div>
 </html>
