--- a/index.html
+++ b/index.html
@@ -25,30 +25,33 @@
                 <h1>Time In Trash</h1>
                 조금 독특한 시관 관리 어플
                 </br>
-                <a href="#qna">#상황별 도움말</a>
-                <a href="#manual">#사용방법</a>
+                <a href="#qna">#상황별 도움말</a>|
+                <a href="#manual">#사용방법</a>|
                 <a href="#license">#오픈소스라이선스</a>
                 </br></br></br>
                 <h3>하루는 모두에게 같은 24시간입니다.</h3>
                 <hr>
-                생각해보세요, 당신과 억대 부자들, 소위 금수저들 모두 공평하게 하루는 24시간이죠?</br>
-                그만큼 시간은 소중합니다. 허지만 하루만에 무언갈 한다 해도 그들을 이기기 어렵습니다.</br>
-                작은 것부터 시작하세요. 당신이 의미 없다고 생각했던 시간들을 기록하세요. TIT를 열고 버튼을 누르기만 하면 됩니다.</br>
+                삼성전자 이재용 부회장, 빌 게이츠, 일론 머스크... 모두에게 하루는 24시간입니다.</br>
+                시간은 소중합니다. 허지만 하루만에 무언갈 한다 해도 그들을 이기기 어렵습니다.</br>
+                아주 작은 것부터 시작하세요. 당신이 의미 없다고 생각했던 시간들을 기록하세요. TIT를 열고 버튼을 누르기만 하면 됩니다.</br>
                 스스로를 변화시키고 싶다면 낭비하고 있는 시간부터 줄여나가세요. 그리고 기록하세요.</br>
-                그럼 보일것입니다. 당신이 절대로 되찾을 수 없는 시간들을.
+                그럼 보일겁니다.
                 </br></br></br></br>
                 <h3><a href="#" id="qna">#</a>상황별 도움말 QnA</h3>
                 <hr>
-                <h5>내가 지금 의미있는 일을 하고 있는지 어떻게 판단하나요?</h5>
+                <h5>내가 지금 의미있는 일을 하고 있는지 어떻게 알아요?</h5>
 
-                간단합니다. 지금 하는 일이 앞으로 당신에게 도움이 될 수 있는지를 고민해 보세요. 많이도 말고 딱 5분 안에요.</br>
-                그렇다고 쉬지 말라는 이야기가 아닙니다. 휴식은 분명히 당신이 앞으로 나아가기 위해 필요한 일이니까요.</br>
-                그러나 30분 쉬어야지 하고 1시간을 하고 2시간을 하고... 분명 당신도 겪어보았을 경험이겠죠?</br>
+                간단합니다. 지금 하는 일이 앞으로 <strong>당신</strong>에게 도움이 될 수 있는지를 고민해 보세요.</br>
+                프로게이머 연습생에게는 롤을 많이 할 수록 도움이 되지만 노량진에서 공부하는 공무원 준비생에게는 시간 낭비입니다.</br>
+                사람마다, 상황에 따라 다 달라요. <strong>당신</strong>의 이루고자 하는 목표, 꿈이 무엇인지. 그럼 그 꿈을 이루기 위해 하는 일이 도움이 되었는지 생각해보세요.</br>
+                </br>
+                그렇다고 쉬지 말라는 이야기가 아닙니다. 당신은 기계가 아니에요. 휴식은 분명히 당신이 앞으로 나아가기 위해 필요한 일이니까요.</br>
+                그러나 30분 쉬어야지 하고 롤을 1시간을 하고 2시간을 하고... 분명 당신도 겪어보았을 경험이겠죠? 이때 낭비되는 시간을 기록하세요.</br>
 
                 </br></br>
-                <h5>수면시간도 관리를 해야 하나요?</h5>
-                물론이죠 :) 6~8시간 정도는 숙면을 취해주세요. 과학적으로 입증되었으니까요.</br>
-                멀리 바라보세요. 당신이 무얼 목표를 하기에 TIT를 이용하는지는 모르지만 잠을 3~4시간 아껴가는 건 당장 앞에 있는 일만 바라보게 되는 무식한 행동일 가능성이 커요</br>
+                <h5>잠도 줄여야 할까요?</h5>
+                6~8시간 정도는 숙면을 취해주세요. 그 이상은 시간 낭비에 포함됩니다.</br>
+                멀리 바라보세요. 당신이 무얼 목표를 하기에 TIT를 이용하는지는 모르지만 잠을 3~4시간 아껴가는 건 당장 앞에 있는 일만 바라보게 되는 무식한 행동일 가능성이 커요.</br>
 
                 </br></br>
                 <h5>왜 이렇게 비싸나요?</h5>
