--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
     <style>
         body { color: #363636;}
         h1, h3, h5 { font-weight: bold;}
-        img { border: 1px solid #363636;
-                border-radius: 15px;}
         hr { size: 10px;}
         a { color: #3273dc;
             text-decoration: none}
+        .appIcon {
+            border: 1px solid #363636;
+            border-radius: 15px;
+        }
     </style>
+    <div class="container-fluid" style="background-color: #FBF8BE;">
+        <img src="./src/background.svg" style="width:100%; height:300px; object-fit: contain;">
+    </div>
     <div class="container">
-    </br></br></br></br></br></br></br>
-                <img src="./src/icon.svg" width="128px" height="128px">
+    </br>
+                <img src="./src/icon.svg" class="appIcon" width="128px" height="128px">
                 </br></br></br>
                 <h1>Time In Trash</h1>
                 조금 독특한 시관 관리 어플
