--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
     </style>
     <div class="container-fluid" style="background-color: #FBF8BE;">
-        <img src="./src/background.svg" style="width:100%; height:300px; object-fit: contain;">
+        <img src="./src/background.svg" class="img-fluid">
     </div>
     <div class="container">
     </br>
