--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             border-radius: 15px;
         }
     </style>
-    <div class="container-fluid" style="background-color: #FBF8BE;">
+    <div class="container-fluid" style="background-color: #70706b;">
         <img src="./src/background.svg" class="img-fluid">
     </div>
     <div class="container">
